# python-dotnet-tools

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/: cli.py
src/commands/: __init__.py  build.py  bump.py  clean.py  init_lib.py  init_min.py  init_proj.py  tag.py  test.py
src/commands/_data/: __init__.py
src/commands/_data/parameters/: init-parameters.json
src/commands/_data/templates/: .editorconfig.template  .gitignore.template  README.md.template  project.Tests.csproj.template  project.minimal.csproj.template  project.nuget.csproj.template  solution.sln.template
tests/: conftest.py  test_suite_bash_lib.py  test_suite_bash_min.py  test_suite_cmd_lib.py  test_suite_cmd_min.py
